fixed review margin on mobile

--- a/css/parts/main.scss
+++ b/css/parts/main.scss
@@ -609,6 +609,7 @@ Review Template
 		}
 		.col-1-2 {
 			width:100%;
+			padding-right:0;
 			img {
 				width:80%;
 				margin:0 auto;
